Refactor book structure and improve content clarity
- Removed redundant font inputs in book.fls to streamline document processing.
- Updated book.log to reflect changes in compilation time and warnings.
- Adjusted chapter structure in book.tex, moving the "System Architecture" section after "Experimental Setup."
- Revised table of contents in book.toc to align with new chapter order and updated section titles.
- Enhanced abstract in sections/abstract.tex for clarity and conciseness.
- Streamlined conclusions and future works in sections/conclusions_and_futureworks.tex by removing unnecessary subsections.
- Improved introduction in sections/introduction.tex for better flow and coherence.
- Modified methodology in sections/methodology.tex to clarify data collection methods and research questions.
- Updated system architecture in sections/system_architecture.tex to reflect changes in output classification and system design.

--- a/book.tex
+++ b/book.tex
@@ -71,7 +71,7 @@
 \usepackage{framed}
 \usepackage{tcolorbox}
 \usepackage{tabularx}
-\usepackage[super]{cite}
+\usepackage{cite}
 
 % Pearson color scheme
 \definecolor{pearsonblue}{RGB}{0,91,156}
@@ -204,9 +204,6 @@
 
 \chapter{Experimental Setup}
 \input{sections/experimental_setup.tex}
-
-\chapter{System Architecture}
-\input{sections/system_architecture.tex}
 
 \chapter{Results and Discussion}
 \input{sections/results_and_discussions.tex}
