--- a/sections/abstract.tex
+++ b/sections/abstract.tex
@@ -1,7 +1,4 @@
 \newpage
 \toclessheading{Abstract}
 
-Effective evaluation of teaching is essential for educational quality assurance, yet conventional approaches such as student feedback often suffer from subjectivity, bias, and inconsistency. This motivated our hypothesis that objective, data-driven analysis of multimodal classroom interactions can provide a more reliable measure of pedagogical effectiveness.
-To test this hypothesis, we designed a system that analyzes classroom video, audio, and transcripts to capture multiple dimensions of teaching. Visual data were processed to extract teacher movement and engagement patterns, audio data were analyzed for prosody and vocal delivery, and linguistic data were examined for discourse clarity and structure. Logistic regression models were then applied to predict instructional outcomes.
-The results demonstrate that while linguistic features alone offered the strongest unimodal performance at 67.0\% accuracy, integration of all modalities significantly improved predictive power. The multimodal system achieved 71.33\% accuracy, showed greater cross-validation stability, and reached an area under the curve of 0.796. These findings confirm our hypothesis that multimodal integration captures complementary aspects of pedagogy that single modalities cannot fully represent.
-This work positions multimodal learning analytics as a scalable, objective alternative to feedback, enabling future automated systems for teaching evaluation.
+Effective assessment of the teaching process is vital for upholding the quality of educational practice, but current methods for assessing educational practices commonly assess students' feedback, which are subjectively based, biased, and less than reliable. Hence, we felt that systematic data-driven evaluation of the enacted practice of multitodal interaction within the classroom would be a better measure of pedagogical effectiveness. We began to investigate this way of thinking by creating a system that analyzed classroom video, audio, and transcripts to record aspects of instruction. The visual modality was processed for teacher movement and interaction, audio was processed for voice and prosody, and the linguistic modality was processed for coherence and organization. Logistic regression models were then used to predict instruction outcomes as measured by students' assessment of learning. The results demonstrate that, while the linguistic features provided the best unimodal performance in accuracy, they were only 67.0\%. The multimodal fusion models increased predictive power to 71.33\% accuracy and provided better cross-validation stability, achieving an ROC score of 0.796. All of theses results support our hypothesis that multimodal integration models productive pedagogic modes that may not be represented by singular modalities. This work also highlights how multimodal learning analytics can draw attention to feedback that is objectively scalable and eventually leads to automated systems for assessing teaching.
