--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -1,10 +1,10 @@
 % This is now Chapter 1
 
-The contemporary educational landscape demands innovative approaches to assess and enhance teaching quality across diverse academic institutions \cite{Heffernan2022}. While traditional evaluation methods have served educational systems for decades, emerging technologies present unprecedented opportunities to transform how we understand and measure pedagogical effectiveness \cite{Ajmal2024}. The limitations inherent in conventional assessment approaches—particularly the subjective nature of student feedback—have prompted researchers and educators to explore alternative methodologies that offer greater objectivity, consistency, and actionable insights \cite{Heffernan2022}. These challenges encompass issues such as demographic bias, inconsistent rating criteria, and the influence of factors unrelated to actual teaching competency \cite{Steinberg2021}. Studies reveal that gender, ethnicity, and personal charisma can significantly skew student evaluations, potentially undermining fair assessment practices \cite{Steinberg2021}.
+The contemporary educational landscape demands innovative approaches to assess and enhance teaching quality across diverse academic institutions \cite{Heffernan2022}. While traditional evaluation methods have served educational systems for decades, emerging technologies present unprecedented opportunities to transform how we understand and measure pedagogical effectiveness \cite{Ajmal2024}. The limitations inherent in conventional assessment approaches, particularly the subjective nature of student feedback have prompted researchers and educators to explore alternative methodologies that offer greater objectivity, consistency, and actionable insights \cite{Heffernan2022}. These challenges encompass issues such as demographic bias, inconsistent rating criteria, and the influence of factors unrelated to actual teaching competency \cite{Steinberg2021}. Studies reveal that gender, ethnicity, and personal charisma can significantly skew student evaluations, potentially undermining fair assessment practices \cite{Steinberg2021}.
 
 Despite these drawbacks, student feedback remains prevalent due to its simplicity, cost-effectiveness, and ability to capture students' perspectives on teaching quality \cite{Ajmal2024}. However, the reliability of student feedback is challenged by inconsistencies across different cohorts and courses, as well as by the tendency for students to focus on surface-level attributes rather than deeper pedagogical competencies \cite{carvalho2022biases}. Several studies have highlighted the need for more robust and objective evaluation mechanisms to complement or replace traditional feedback \cite{Ginsburg2022NecessaryBI}.
 
-Recent advancements in educational technology have paved the way for more objective and comprehensive evaluation methods \cite{Wang2022}. Among these, multimodal systems that leverage data from multiple sources—such as audio, video, gesture recognition, and classroom interaction analytics—offer promising alternatives \cite{10.1007/978-981-99-9109-9_7}. These systems can provide a holistic view of teacher performance by capturing a wide range of behavioral and communicative cues that are often overlooked in traditional feedback mechanisms.
+Recent advancements in educational technology have paved the way for more objective and comprehensive evaluation methods \cite{Wang2022}. Among these, multimodal systems that leverage data from multiple sources such as audio, video, gesture recognition, and classroom interaction analytics offer promising alternatives \cite{10.1007/978-981-99-9109-9_7}. These systems can provide a holistic view of teacher performance by capturing a wide range of behavioral and communicative cues that are often overlooked in traditional feedback mechanisms.
 
 Artificial intelligence (AI) and machine learning (ML) techniques have enabled the automated analysis of complex classroom behaviors, including teacher movement, speech patterns, engagement strategies, and student responses \cite{Wang2022}. For instance, pose estimation algorithms can detect and classify teaching activities, while emotion recognition systems can assess the affective climate of the classroom. These technologies not only enhance the objectivity of evaluations but also provide granular feedback that can inform targeted professional development \cite{YE2023108915}.
 
