--- a/sections/titlepage.tex
+++ b/sections/titlepage.tex
@@ -9,13 +9,14 @@
 \includegraphics[width=2.5cm]{sections/logo.jpg}\\
 
 \vspace{0.5cm}
-\rule{\textwidth}{0.4pt}
+\rule{\textwidth\color{pearsongray}}{0.4pt}
 
-\vspace{0.3cm}
-{\Large \textbf{\projectTitle}}
-\vspace{0.3cm}
+\vspace{0.2cm}
+{\Large\textbf{A novel approach to evaluate pedagogical}}\\[0.2cm]
+{\Large\textbf{outcomes using multimodal data}}
+\vspace{0.2cm}
 
-\rule{\textwidth}{0.4pt}
+\rule{\textwidth\color{pearsongray}}{0.4pt}
 
 \vspace{1.5cm}
 \begin{minipage}[t]{0.45\textwidth}
