Refactor code structure for improved readability and maintainability

--- a/book.tex
+++ b/book.tex
@@ -183,6 +183,7 @@
 \input{sections/originality.tex}
 \input{sections/approval.tex}
 \input{sections/acknowledgments.tex}
+\input{sections/dedication.tex}
 \input{sections/abstract.tex}
 
 
@@ -196,14 +197,14 @@
 
 % Pearson-style List of Figures and Tables (unnumbered chapters, styled like TOC)
 \newpage
-\renewcommand{\contentsname}{List of Figures}
+\renewcommand{\listfigurename}{List of Figures}
 {\let\oldchapter\chapter
 \renewcommand{\chapter}[1]{}
 \listoffigures
 \renewcommand{\chapter}{\oldchapter}}
 
 \newpage
-\renewcommand{\contentsname}{List of Tables}
+\renewcommand{\listtablename}{List of Tables}
 {\let\oldchapter\chapter
 \renewcommand{\chapter}[1]{}
 \listoftables
