--- a/sections/methodology.tex
+++ b/sections/methodology.tex
@@ -34,7 +34,7 @@ Student evaluators will include all enrolled students in the selected course sec
 \subsubsection{Student Feedback Instruments}
 Traditional evaluation data will be collected using two complementary instruments. First, a standardized quantitative evaluation form using a 5-point Likert scale covering seven dimensions of teaching effectiveness: clarity, organization, engagement, assessment, feedback, accessibility, and overall effectiveness. Second, open-ended qualitative questions eliciting specific comments on teaching strengths, areas for improvement, and notable classroom experiences.
 
-\begin{figure}[H]
+\begin{figure}[ht]
     \centering
     \begin{tikzpicture}[
         module/.style={rectangle, draw, rounded corners, minimum width=2.8cm, minimum height=1.4cm, text width=2.2cm, align=center, font=\small},
