--- a/sections/related_work.tex
+++ b/sections/related_work.tex
@@ -5,6 +5,8 @@ Student feedback has long been the predominant method for evaluating teaching ef
 
 Despite its limitations, student feedback remains a central component in most institutional evaluation frameworks. Many universities rely on end-of-term surveys or online platforms to collect student opinions, which are then used for faculty appraisal, promotion, and professional development \cite{8615171}. However, the overreliance on student feedback can sometimes lead to unintended consequences, such as grade inflation or a focus on entertainment over educational rigor. Furthermore, the lack of standardization in survey instruments and interpretation of results can introduce inconsistencies across departments and institutions. Recent studies have also explored the psychological impact of student evaluations on teachers, noting increased stress and potential discouragement among faculty who receive negative or biased feedback. These findings underscore the need for complementary evaluation methods that can provide a more balanced and holistic view of teaching effectiveness.
 
+Figure 4.1 provides a visual taxonomy of teacher evaluation methods, summarizing the main approaches discussed in this section.
+
 \subsection{Auditory-Based Evaluation}
 Auditory-based evaluation methods analyze audio data from classroom interactions to assess teaching performance. Techniques in this domain include speech recognition, prosody analysis, and emotion detection from vocal cues. These approaches can provide insights into teacher-student engagement, clarity of instruction, and the emotional climate of the classroom. Machine learning and signal processing advancements have enabled more accurate and automated auditory assessments, though challenges remain in handling noisy environments and diverse speaking styles \cite{Wang2022, Yang2022}.
 
@@ -31,7 +33,6 @@ In the context of teacher evaluation, auditory analysis offers a unique perspect
     \caption{Taxonomy of teacher performance evaluation methods.}
     \label{fig:taxonomy}
 \end{figure}
-
 
 \subsection{Vision-Based Evaluation}
 Vision-based evaluation leverages video data to objectively assess teacher performance. Methods include gesture recognition, pose estimation, and analysis of classroom movement patterns. These techniques capture non-verbal communication, instructional delivery, and engagement strategies. Computer vision and deep learning have significantly advanced the capabilities of vision-based systems, enabling detailed behavioral analysis in real-time classroom settings \cite{10.1007/978-981-99-9109-9_7, hou2024encouragement, Lin2021, AFSAR20156935, 10050049, YE2023108915}.
