--- a/sections/system_architecture.tex
+++ b/sections/system_architecture.tex
@@ -113,7 +113,7 @@ This detailed implementation ensures the system is robust, interpretable, and al
 \centering
 \renewcommand{\arraystretch}{1.5} % Increase row padding
 \setlength{\tabcolsep}{8pt} % Increase column padding
-\caption{Pedagogical Dimensions Mapped to Multimodal Features with Supporting Literature}
+\caption{Multimodal Features with Supporting Literature}
 \begin{tabularx}{\textwidth}{|>{\raggedright\arraybackslash}X|>{\raggedright\arraybackslash}X|>{\raggedright\arraybackslash}X|>{\raggedright\arraybackslash}X|}
 \hline
 	\textbf{\normalsize Dimension} & \textbf{\normalsize Audio Features} & \textbf{\normalsize Visual Features} & \textbf{\normalsize Linguistic Features} \\
